# typewit_gce

./: Cargo.toml  Changelog.md  LICENSE-ZLIB.md  README.md
.github/workflows/: rust.yml
src/: __const_marker_factory.rs  gce_int_eq_macro.rs  lib.rs  macros.rs  root_module_hidden_items.rs
src/macros/: none_delimited_tests.rs
tests/: all_tests.rs
tests/misc_tests/: gce_int_eq_tests.rs  none_delimited_tests.rs  test_utils.rs  ui_tests.rs
tests/misc_tests/failing_asserts_ui/: failing_asserts-err.rs  failing_asserts-err.stderr  fails_unwrapping_typecmp-err.rs  fails_unwrapping_typecmp-err.stderr
tests/misc_tests/overflow_failures_ui/: overflowing-exprs-err.rs  overflowing-exprs-err.stderr  zero_denominator-err.rs  zero_denominator-err.stderr
tests/misc_tests/syntax_failures_ui/: syntax_failure_bitwise_and_ui-err.rs  syntax_failure_bitwise_and_ui-err.stderr  syntax_failures_ui-err.rs  syntax_failures_ui-err.stderr
tests/misc_tests/type_failures_ui/: failed_type_inference-err.rs  failed_type_inference-err.stderr  mismatched_types-err.rs  mismatched_types-err.stderr
typewit_gce_proc_macros/: Cargo.toml
typewit_gce_proc_macros/src/: error.rs  i129.rs  lib.rs  nonzeroi129.rs  normalization.rs  parsing_unnorm_polynomial.rs  unevaled_expr.rs  utils.rs
typewit_gce_proc_macros/src/normalization/: div_rem_tests.rs  formatting.rs  formatting_tests.rs  norm_err.rs  norm_polynomial.rs  norm_rem_div.rs  norm_vars.rs  normal_tests.rs  test_interpreter.rs  varlike.rs
typewit_gce_proc_macros/src/parsing_unnorm_polynomial/: unnorm_poly_tests.rs
